--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <div id="lead">
         <div id="lead-content">
-            <h1>Ryan Fitzgerald</h1>
+            <h1>Enis Davud</h1>
             <h2>Software Engineer</h2>
             <a href="#" class="btn-rounded-white">Download Resume</a>
         </div>
@@ -73,9 +73,9 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat. Donec
-                        eu vehicula neque. Donec viverra lorem nunc, tempus euismod eros sollicitudin ut. Quisque et tincidunt libero. Donec id pharetra justo. Proin euismod lacinia dolor, eu scelerisque justo tempus pharetra. Vivamus nunc justo, finibus
-                        ut nisl sed, euismod rhoncus nulla. Proin sed magna egestas, egestas ante et, congue eros. In consequat, mauris dapibus tincidunt suscipit, ex libero aliquet diam, at maximus risus enim non leo.
+                        Hello! My name is Enis Davud and I am a 24 year old full-stack web developer. I am currently in the process of a career change from medicine to software engineering
+                        and I couldn't be more excited to accomplish new milestones in the world of technology. My current skills include HTML, CSS, JS, and Java, as well as frameworks such
+                        as Bootstrap and Spring Boot.
                     </p>
                 </div>
             </div>
@@ -86,15 +86,16 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="August 2022 – December 2022">
+                <h3>Generation USA</h3>
+                <h4>Full-Stack Web Development</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    Participated in a 16 week bootcamp that focused on the front and back-end of web development using HTML, CSS, JS, Java, and associated libraries and frameworks.
+                    This course taught me how to create, design, and deploy high quality, custom websites independently and efficiently.
                 </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
+            <!-- <div data-date="September 2015 – September 2016">
                 <h3>Employer Name</h3>
                 <h4>Job Title</h4>
                 <p>
@@ -110,22 +111,22 @@
                 </p>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- End #experience -->
 
     <div id="education">
         <h2 class="heading">Education</h2>
         <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
-            <p>
+            <h3>SUNY at Albany</h3>
+            <span class="education-date">August 2017 - May 2020</span>
+            <h4>Bachelor of Science in Human Biology</h4>
+            <!-- <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-            </p>
+            </p> -->
         </div>
         <!-- End .education-block -->
 
-        <div class="education-block">
+        <!-- <div class="education-block">
             <h3>University of Ottawa</h3>
             <span class="education-date">Sept 2016 - Sept 2017</span>
             <h4>Bachelor of Science in Computer Science</h4>
@@ -140,7 +141,7 @@
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                 </li>
             </ul>
-        </div>
+        </div> -->
         <!-- End .education-block -->
     </div>
     <!-- End #education -->
@@ -189,31 +190,10 @@
         <h2 class="heading">Skills</h2>
         <ul>
             <li>JavaScript</li>
-            <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
+            <li>Python</li>    
             <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
             <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
             <li>JavaScript</li>
-            <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
         </ul>
     </div>
     <!-- End #skills -->
@@ -230,14 +210,14 @@
         </div>
         <!-- End #contact-form -->
     </div>
-    <!-- End #contact -->
+    End #contact
 
     <footer>
         <div class="container">
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; <span id="current-year">2022</span> YOUR NAME
+                        Copyright &copy; <span id="current-year">2022</span> Enis Davud
                     </p>
                 </div>
                 <div class="col-sm-2 top">
